--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/kv": "1.0.0",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@vercel/kv": "1.0.0"
+    "redis": "^5.8.2"
   }
 }
